trunk/Archive2/75/7eb1d2cbc8ac3b/output
main.cpp:4:1: warning: using this character in an identifier is incompatible with C99 [-Wc99-compat]
<U+FEFF>
^~~~~~~~
main.cpp:4:1: error: unknown type name '﻿'
main.cpp:7:1: error: expected unqualified-id
int main() { std::cout << "Hello, World!\n"; }
^
1 warning and 2 errors generated.
