trunk/Archive2/75/7eb1d2cbc8ac3b/main.cpp
#include <iostream>

// BOM inserted on line between here
﻿
// and here

int main() { std::cout << "Hello, World!\n"; }
